Fix navbar z-index

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -1,6 +1,7 @@
 @import "styles/mainUtil";
 
 .nav {
+  z-index: 99;
   top: 0;
   position: sticky;
   background-color: $white;
